--- a/RMTV-recorder/MainWindow.xaml
+++ b/RMTV-recorder/MainWindow.xaml
@@ -151,6 +151,7 @@
                         <ColumnDefinition Width="Auto" />
                         <ColumnDefinition Width="10" />
                         <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
                     <Button Grid.Column="0" x:Name="btn_addRec" 
                         Height="30" Width="30" 
@@ -170,6 +171,23 @@
                             <Image Source="/Resource/delete.png" Width="20" Height="20"/>
                         </StackPanel>
                     </Button>
+                    <StackPanel Grid.Column="3" Orientation="Horizontal"  HorizontalAlignment="Right">
+                        <Button Height="30" Width="30" 
+                                x:Name="btn_test1"
+                                Background="Transparent"
+                                Content="test1"
+                                Click='btn_test1_Click'/>
+
+                        <Label Width="10"/>
+                        
+                        <Button Height="30" Width="30" 
+                                x:Name="btn_test2"
+                                Background="Transparent"
+                                Content="test2"
+                                Click='btn_test2_Click'/>
+                    </StackPanel>
+                    
+
                 </Grid>
                 <Grid Grid.Row="1" Margin="0,10">
                     <DataGrid Name="dgRecObj" Height="220"
