--- a/RMTV-recorder/CommonUI/AddRec_UC.xaml
+++ b/RMTV-recorder/CommonUI/AddRec_UC.xaml
@@ -5,13 +5,14 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:RMTV_recorder"
              mc:Ignorable="d" 
-             Height="250" Width="350" Background="OldLace">
+             Height="270" Width="350" Background="OldLace">
     <Grid Margin="10">
         <Grid.RowDefinitions>
-            <RowDefinition Height="40" />
-            <RowDefinition Height="40" />
-            <RowDefinition Height="40" />
-            <RowDefinition Height="40" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
@@ -19,51 +20,97 @@
             <ColumnDefinition Width="5" />
             <ColumnDefinition Width="Auto" />
         </Grid.ColumnDefinitions>
-        <Label Grid.Row="0" Grid.Column="0" Content="Language" VerticalAlignment="Center" FontWeight="ExtraBold" Foreground="Salmon"/>
-        <Label Grid.Row="1" Grid.Column="0" Content="Start Time" VerticalAlignment="Center" FontWeight="ExtraBold" Foreground="Salmon"/>
-        <Label Grid.Row="2" Grid.Column="0" Content="End Time" VerticalAlignment="Center" FontWeight="ExtraBold" Foreground="Salmon"/>
-        <StackPanel Grid.Row="0" Grid.Column="2" Orientation="Horizontal" VerticalAlignment="Center">
-            <RadioButton GroupName="lang" x:Name="rb_lang_spanish" IsChecked="True" VerticalContentAlignment="Center">
-                <Label Content="Spanish"/>
-            </RadioButton>
-            <Label Width="10"/>
-            <RadioButton GroupName="lang" VerticalContentAlignment="Center">
-                <Label Content="English"/>
-            </RadioButton>
-        </StackPanel>
-        <StackPanel Grid.Row="1" Grid.Column="2" Orientation="Horizontal" VerticalAlignment="Center">
-            <RadioButton GroupName="starttime" x:Name="rb_starttime_now" IsChecked="True" VerticalContentAlignment="Center" Checked="RadioButton_StartTime_CheckedChanged">
-                <Label Content="Now"/>
-            </RadioButton>
-            <RadioButton GroupName="starttime" VerticalContentAlignment="Center" Checked="RadioButton_StartTime_CheckedChanged">
+        <Label Grid.Row="0" Grid.Column="0" Content="Channel" VerticalAlignment="Center" FontWeight="ExtraBold" Foreground="Salmon"/>
+        <Label Grid.Row="2" Grid.Column="0" Content="Start Time" VerticalAlignment="Center" FontWeight="ExtraBold" Foreground="Salmon"/>
+        <Label Grid.Row="3" Grid.Column="0" Content="End Time" VerticalAlignment="Center" FontWeight="ExtraBold" Foreground="Salmon"/>
+        <Grid Grid.Row="0" Grid.Column="2">
+            <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Height="40">
+                <RadioButton GroupName="channel" x:Name="rb_channel_spanish" IsChecked="True" VerticalContentAlignment="Center"
+                             Checked="Channel_RadioButton_CheckChanged">
+                    <Label Content="Spanish"/>
+                </RadioButton>
+                <Label Width="10"/>
+                <RadioButton GroupName="channel" VerticalContentAlignment="Center"
+                             Checked="Channel_RadioButton_CheckChanged">
+                    <Label Content="English"/>
+                </RadioButton>
+                <Label Width="10"/>
+                <RadioButton GroupName="channel" VerticalContentAlignment="Center" x:Name="rb_channel_custom"
+                             Checked="Channel_RadioButton_CheckChanged" Visibility="Collapsed">
+                    <Label Content="Custom" Foreground="Firebrick"/>
+                </RadioButton>
+            </StackPanel>
+        </Grid>
+        <Grid Grid.Row="1" Grid.Column="2" Name="grid_custom" Visibility="Collapsed">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="10" />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="5" />
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="10" />
+                <ColumnDefinition Width="50" />
+            </Grid.ColumnDefinitions>
+            <ScrollViewer Grid.Column="1" HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Disabled" Name="scv">
+                <TextBox Name="tboxFilePath" VerticalContentAlignment="Center"
+                         MaxWidth="{Binding ElementName=scv,Path=ActualWidth}"
+                         ToolTip="{Binding RelativeSource={RelativeSource Self}, Path=Text}"/>
+            </ScrollViewer>
+            <Label Grid.Column="2" Content=""/>
+            <Button Grid.Column="3" Width="25" Content="…" 
+                            Name="btnFileSelect"
+                            VerticalContentAlignment="Center"
+                            Background="Salmon"
+                            Click="btnFileSelect_Click"/>
+            <CheckBox Grid.Column="5" Name="cb_verify" 
+                      FontSize="9"
+                      IsChecked="True"
+                      VerticalContentAlignment="Center">
+                <TextBlock TextWrapping="Wrap" Text="Don't Verify"/>
+            </CheckBox>
+        </Grid>
+        <Grid Grid.Row="2" Grid.Column="2" Height="40">
+                <StackPanel  Orientation="Horizontal" VerticalAlignment="Center">
+                <RadioButton GroupName="starttime" x:Name="rb_starttime_now" IsChecked="True" VerticalContentAlignment="Center" Checked="RadioButton_StartTime_CheckedChanged">
+                    <Label Content="Now"/>
+                </RadioButton>
+                <RadioButton GroupName="starttime" VerticalContentAlignment="Center" Checked="RadioButton_StartTime_CheckedChanged">
+                    <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
+                        <Label Content="At"/>
+                        <TextBox x:Name="tb_statrttime_hour" Width="30" MaxLength="2" TextChanged="textBox_TextChanged" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" IsEnabled="False"/>
+                        <Label Content=":"/>
+                        <TextBox x:Name="tb_statrttime_min" Width="30" MaxLength="2" TextChanged="textBox_TextChanged" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" IsEnabled="False"/>
+                        <Label Content="{Binding Path=TimeZoneString}" ToolTip="{Binding Path=TimeZoneToolTip}"/>
+                    </StackPanel>
+                </RadioButton>
+            </StackPanel>
+        </Grid>
+        <Grid Grid.Row="3" Grid.Column="2" Height="40">
+            <RadioButton GroupName="endtime" x:Name="rb_set_endtime" IsChecked="True" VerticalContentAlignment="Center" Checked="RadioButton_EndTime_CheckedChanged">
                 <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
                     <Label Content="At"/>
-                    <TextBox x:Name="tb_statrttime_hour" Width="30" MaxLength="2" TextChanged="textBox_TextChanged" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" IsEnabled="False"/>
+                    <TextBox x:Name="tb_endtime_hour" Width="30" MaxLength="2" TextChanged="textBox_TextChanged" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
                     <Label Content=":"/>
-                    <TextBox x:Name="tb_statrttime_min" Width="30" MaxLength="2" TextChanged="textBox_TextChanged" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" IsEnabled="False"/>
-                    <Label Content="(Spain Time)"/>
+                    <TextBox x:Name="tb_endtime_min" Width="30" MaxLength="2" TextChanged="textBox_TextChanged" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
+                    <Label Content="{Binding Path=TimeZoneString}" ToolTip="{Binding Path=TimeZoneToolTip}"/>
                 </StackPanel>
             </RadioButton>
-        </StackPanel>
-        <RadioButton Grid.Row="2" Grid.Column="2" GroupName="endtime" x:Name="rb_set_endtime" IsChecked="True" VerticalContentAlignment="Center" Checked="RadioButton_EndTime_CheckedChanged">
-            <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
-                <Label Content="At"/>
-                <TextBox x:Name="tb_endtime_hour" Width="30" MaxLength="2" TextChanged="textBox_TextChanged" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
-                <Label Content=":"/>
-                <TextBox x:Name="tb_endtime_min" Width="30" MaxLength="2" TextChanged="textBox_TextChanged" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
-                <Label Content="(Spain Time)"/>
-            </StackPanel>
-        </RadioButton>
-        <RadioButton Grid.Row="3" Grid.Column="2" GroupName="endtime" VerticalContentAlignment="Center" Checked="RadioButton_EndTime_CheckedChanged">
-            <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
-                <Label Content="Or duration"/>
-                <TextBox x:Name="tb_duration_hour" Width="30" MaxLength="2" TextChanged="textBox_TextChanged" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" IsEnabled="False"/>
-                <Label Content="hour"/>
-                <TextBox x:Name="tb_duration_min" Width="30" MaxLength="3" TextChanged="textBox_TextChanged" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" IsEnabled="False"/>
-                <Label Content="minutes"/>
-            </StackPanel>
-        </RadioButton>
-        <StackPanel Grid.Row="4" Grid.Column="2" Margin="0,10" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Bottom">
+        </Grid>
+        <Grid Grid.Row="4" Grid.Column="2" Height="40">
+            <RadioButton Grid.Row="3" Grid.Column="2" GroupName="endtime" VerticalContentAlignment="Center" Checked="RadioButton_EndTime_CheckedChanged">
+                <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
+                    <Label Content="Or duration"/>
+                    <TextBox x:Name="tb_duration_hour" Width="30" MaxLength="2" TextChanged="textBox_TextChanged" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" IsEnabled="False"/>
+                    <Label Content="hour"/>
+                    <TextBox x:Name="tb_duration_min" Width="30" MaxLength="3" TextChanged="textBox_TextChanged" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" IsEnabled="False"/>
+                    <Label Content="minutes"/>
+                </StackPanel>
+            </RadioButton>
+        </Grid>
+        <StackPanel Grid.Row="5" Grid.Column="2" Margin="0,10" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Bottom">
             <Button Content="Cancel" Height="30" Width="60" Background="Transparent" Click="Button_Close_Click"/>
             <Label Width="10"/>
             <Button Content="Confirm" Height="30" Width="60" Background="Salmon" Click="Button_Confirm_Click"/>
